[package]
name = "lcov_badge_generator"
version = "0.1.1"
authors = ["Romain Reignier <rom.reignier@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
description = "CI Badge generator for LCOV reports"
repository = "https://github.com/rmainreignier/lcov_badge_generator"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'

[dependencies]
clap = "~2.33"
scraper = "0.11.0"
badge = "0.2.0"
